atualizacao no banco

--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-DB-user = leonardo20007
-DB-password = 1234
-Cluster_adress = @cluster0.8hwmg.mongodb.net
+URI = mongodb+srv://leonardosantoslopes2007:1234@cluster0.8hwmg.mongodb.net/
