--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URI ="mongodb+srv://leonardosantoslopes2007:1234@cluster0.8hwmg.mongodb.net/"
+URI =mongodb+srv://leonardosantoslopes2007:1234@cluster0.8hwmg.mongodb.net/prova
 
